<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">文化</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_icon">首页</string>
    <string name="search_icon">导览</string>
    <string name="place_icon">景点</string>
    <string name="baike_icon">百科</string>
    <string name="more_icon">更多</string>
    <string name="prev">上一步</string>
    <string name="next">下一步</string>
    
    <color name="black">#000000</color>
	<color name="white">#ffffff</color>
</resources>
